--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="output-container" id="output-container">
             <button onclick="run()">Generate</button>
     </div>
+    <button onclick="print()" class="print">Print</button>
     <script src="./js/app.js"></script>
 </body>
 </html>
